--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <a href="https://prankinator.seafoodstudios.com" title="Prankinator" target="_blank">Prankinator</a>
       <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy" target="_blank">Sigma Alchemy</a>
       <a href="https://salmon.seafoodstudios.com" title="Salmon WebView" target="_blank">Salmon WebView</a>
-      <a href="http://omegaweb.tiiny.site" title="Omega Web" target="_blank">Omega Web</a>
+      <a href="http://ow.tiiny.site" title="Omega Web" target="_blank">Omega Web</a>
       <a href="https://algae.seafoodstudios.com" title="ALGAE Transferer" target="_blank">ALGAE Transferer</a>
       <a href="https://algaemine.seafoodstudios.com" title="ALGAE Miner" target="_blank">ALGAE Miner</a>
       <a href="https://sushios.seafoodstudios.com" title="SushiOS" target="_blank">SushiOS</a>
