--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <a href="https://algae.seafoodstudios.com" title="ALGAE Transferer" target="_blank">ALGAE Transferer</a>
       <a href="https://algaemine.seafoodstudios.com" title="ALGAE Miner" target="_blank">ALGAE Miner</a>
       <a href="https://sushios.seafoodstudios.com" title="SushiOS" target="_blank">SushiOS</a>
-      <a href="https://spaceship-arduino.vercel.app/" title="Spaceship" target="_blank">Spaceship</a>
+      <a href="https://spaceship.seafoodstudios.com/" title="Spaceship" target="_blank">Spaceship</a>
     </div>
 
     <!-- GitHub and Updates Links -->
