--- a/index.html
+++ b/index.html
@@ -6,189 +6,110 @@
   <title>SeafoodStudios</title>
   <style>
     body {
-      font-family: 'Source Code Pro', monospace; /* Developer font */
-      background: #181818;
-      color: #e0e0e0;
+      font-family: 'Source Code Pro', monospace; /* Monospaced font */
+      background: #0d0d0d; /* Darker terminal-like background */
+      color: #d1d5db; /* Light gray for text */
       margin: 0;
       padding: 0;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       height: 100%;
       min-height: 100vh;
-      overflow-y: auto;
-      text-align: center;
       box-sizing: border-box;
-      padding-top: 20px; /* Add padding for better spacing */
+    }
+
+    /* Terminal Header */
+    .terminal-header {
+      background: #1e1e1e;
+      width: 100%;
+      padding: 10px 15px;
+      color: #d4d4d4;
+      display: flex;
+      align-items: center;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+      border-bottom: 1px solid #333;
     }
 
     h1 {
-      font-size: 5vw;
-      margin-top: 0;
-      color: #ff4081; /* Accent color */
+      font-size: 4vw;
+      color: #61dafb; /* Light blue color like VS Code */
+      margin: 30px 0 10px;
       text-transform: uppercase;
-      letter-spacing: 5px;
-      text-shadow: 
-        0 0 15px rgba(255, 64, 129, 0.6),
-        0 0 25px rgba(255, 64, 129, 0.5), 
-        0 0 35px rgba(255, 64, 129, 0.4),
-        0 0 45px rgba(255, 64, 129, 0.3);
+      text-shadow: 0 0 10px rgba(97, 218, 251, 0.5);
     }
 
     p {
-      font-size: 2.5vw;
-      margin: 20px 0;
-      color: rgba(240, 240, 240, 0.85);
-      letter-spacing: 1px;
-      line-height: 1.5;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3), 0 0 15px rgba(255, 255, 255, 0.2);
+      font-size: 1.2rem;
+      color: #a9b7c6; /* Muted cyan text */
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
     }
 
-    /* Container for Project Links */
+    /* Projects Section */
     .projects-container {
-      margin-top: 20px;
-      display: flex;
-      flex-wrap: wrap; /* Allow buttons to wrap to next line on smaller screens */
-      justify-content: center; /* Center buttons horizontally */
-      gap: 15px; /* Add space between buttons */
-      font-family: 'Source Code Pro', monospace;
-      width: 100%; /* Ensure links take full width */
-      max-width: 900px; /* Limit max width for readability */
-    }
-
-    /* Container for GitHub and Updates Links */
-    .other-links-container {
-      margin-top: 40px;
-      display: flex;
-      justify-content: center; /* Center buttons horizontally */
-      gap: 20px; /* Add more space between these links */
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      padding: 20px;
+      width: 90%;
+      max-width: 1200px;
     }
 
     a {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #1e88e5;
-      color: #e0e0e0;
+      display: block;
+      padding: 10px 20px;
+      font-size: 1rem;
       text-decoration: none;
-      font-size: 1.1rem;
-      border-radius: 25px;
-      transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.3s ease;
-      text-transform: uppercase;
-      letter-spacing: 1.5px;
-      box-shadow: 0 0 15px rgba(30, 136, 229, 0.6), 0 0 25px rgba(30, 136, 229, 0.5);
+      color: #e5e5e5;
+      background: #282c34;
+      border: 1px solid #3c3f46;
+      border-radius: 4px;
+      text-align: center;
+      transition: background 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     }
 
     a:hover {
-      transform: translateY(-6px);
-      background-color: #1976d2;
-      box-shadow: 0 0 30px rgba(25, 118, 210, 0.8), 0 0 50px rgba(25, 118, 210, 0.6);
+      background: #3c3f46;
+      transform: translateY(-3px);
     }
 
     a:active {
       transform: translateY(0);
-      background-color: #1565c0;
-      box-shadow: 0 0 15px rgba(30, 136, 229, 0.5);
     }
 
     footer {
       margin-top: auto;
-      font-size: 0.7rem; /* Smaller font size for copyright */
-      color: rgba(240, 240, 240, 0.6);
-      letter-spacing: 1px;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
-      margin-bottom: 10px; /* Reduce the bottom margin */
+      padding: 10px;
+      font-size: 0.8rem;
+      color: #777;
+      border-top: 1px solid #333;
+      width: 100%;
+      text-align: center;
     }
-
-    footer p {
-      margin: 0;
-    }
-
-    /* Responsive Styles */
-    @media (max-width: 1024px) {
-      h1 {
-        font-size: 7vw;
-      }
-      p {
-        font-size: 3.5vw;
-      }
-      .projects-container {
-        gap: 15px;
-      }
-      a {
-        font-size: 1.1rem;
-        padding: 16px 28px;
-      }
-    }
-
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 8vw;
-      }
-      p {
-        font-size: 4vw;
-      }
-      .projects-container {
-        gap: 20px;
-      }
-      .other-links-container {
-        gap: 30px;
-      }
-      a {
-        font-size: 1rem;
-        padding: 14px 24px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 10vw;
-      }
-      p {
-        font-size: 5vw;
-      }
-      .projects-container {
-        gap: 25px;
-      }
-      .other-links-container {
-        gap: 35px;
-      }
-      a {
-        font-size: 0.9rem;
-        padding: 12px 22px;
-      }
-    }
-
   </style>
 </head>
 <body>
-  <div>
-    <h1>SeafoodStudios</h1>
-    <p>Welcome to SeafoodStudios!</p>
+  <!-- Terminal Header -->
+  <div class="terminal-header"></div>
 
-    <!-- Projects Links -->
-    <div class="projects-container">
-      <a href="https://cloudroom.seafoodstudios.com" title="Cloudroom" target="_blank">Cloudroom</a>
-      <a href="https://lightswitch.seafoodstudios.com" title="Light Switch Simulator" target="_blank">Light Switch Simulator</a>
-      <a href="https://prankinator.seafoodstudios.com" title="Prankinator" target="_blank">Prankinator</a>
-      <a href="https://alchemy.seafoodstudios.com" title="Sigma Alchemy" target="_blank">Sigma Alchemy</a>
-      <a href="https://salmon.seafoodstudios.com" title="Salmon WebView" target="_blank">Salmon WebView</a>
-      <a href="http://ow.tiiny.site" title="Omega Web" target="_blank">Omega Web</a>
-      <a href="https://algae.seafoodstudios.com" title="ALGAE Transferer" target="_blank">ALGAE Transferer</a>
-      <a href="https://algaemine.seafoodstudios.com" title="ALGAE Miner" target="_blank">ALGAE Miner</a>
-      <a href="https://sushios.seafoodstudios.com" title="SushiOS" target="_blank">SushiOS</a>
-      <a href="https://spaceship.seafoodstudios.com/" title="Spaceship" target="_blank">Spaceship</a>
-    </div>
+  <h1>SeafoodStudios</h1>
+  <p>Welcome to SeafoodStudios, a hub for creative developer projects.</p>
 
-    <!-- GitHub and Updates Links -->
-    <div class="other-links-container">
-      <a href="https://github.com/SeafoodStudios" title="GitHub" target="_blank">GitHub</a>
-      <a href="https://updates.seafoodstudios.com" title="Updates" target="_blank">Updates</a>
-    </div>
+  <!-- Projects Links -->
+  <div class="projects-container">
+    <a href="https://cloudroom.seafoodstudios.com" target="_blank">Cloudroom</a>
+    <a href="https://lightswitch.seafoodstudios.com" target="_blank">Light Switch Simulator</a>
+    <a href="https://prankinator.seafoodstudios.com" target="_blank">Prankinator</a>
+    <a href="https://alchemy.seafoodstudios.com" target="_blank">Sigma Alchemy</a>
+    <a href="https://salmon.seafoodstudios.com" target="_blank">Salmon WebView</a>
+    <a href="http://ow.tiiny.site" target="_blank">Omega Web</a>
+    <a href="https://algae.seafoodstudios.com" target="_blank">ALGAE Transferer</a>
+    <a href="https://algaemine.seafoodstudios.com" target="_blank">ALGAE Miner</a>
+    <a href="https://sushios.seafoodstudios.com" target="_blank">SushiOS</a>
+    <a href="https://spaceship.seafoodstudios.com/" target="_blank">Spaceship</a>
   </div>
 
-  <footer>
-    <p>© 2024 SeafoodStudios. All rights reserved.</p>
-  </footer>
+  <footer>© 2024 SeafoodStudios. All rights reserved.</footer>
 </body>
 </html>
