--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
     <a href="https://algaemine.seafoodstudios.com" target="_blank">ALGAE Miner</a>
     <a href="https://sushios.seafoodstudios.com" target="_blank">SushiOS</a>
     <a href="https://spaceship.seafoodstudios.com/" target="_blank">Spaceship</a>
+    
+    <a href="https://github.com/SeafoodStudios" target="_blank">GitHub</a>
+    <a href="https://updates.seafoodstudios.com/" target="_blank">Updates</a>
   </div>
 
   <footer>© 2024 SeafoodStudios. All rights reserved.</footer>
