--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       min-height: 100vh;
       box-sizing: border-box;
     }
-
     /* Terminal Header */
     .terminal-header {
       background: #1e1e1e;
@@ -30,7 +29,6 @@
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
       border-bottom: 1px solid #333;
     }
-
     h1 {
       font-size: 4vw;
       color: #61dafb; /* Light blue color like VS Code */
@@ -38,13 +36,11 @@
       text-transform: uppercase;
       text-shadow: 0 0 10px rgba(97, 218, 251, 0.5);
     }
-
     p {
       font-size: 1.2rem;
       color: #a9b7c6; /* Muted cyan text */
       text-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
     }
-
     /* Projects Section */
     .projects-container {
       display: grid;
@@ -54,7 +50,6 @@
       width: 90%;
       max-width: 1200px;
     }
-
     a {
       display: block;
       padding: 10px 20px;
@@ -68,16 +63,13 @@
       transition: background 0.3s ease, transform 0.2s ease;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     }
-
     a:hover {
       background: #3c3f46;
       transform: translateY(-3px);
     }
-
     a:active {
       transform: translateY(0);
     }
-
     footer {
       margin-top: auto;
       padding: 10px;
@@ -92,10 +84,8 @@
 <body>
   <!-- Terminal Header -->
   <div class="terminal-header"></div>
-
   <h1>SeafoodStudios</h1>
   <p>Welcome to SeafoodStudios, a hub for creative developer projects.</p>
-
   <!-- Projects Links -->
   <div class="projects-container">
     <a href="https://cloudroom.seafoodstudios.com" target="_blank">Cloudroom</a>
@@ -108,11 +98,11 @@
     <a href="https://algaemine.seafoodstudios.com" target="_blank">ALGAE Miner</a>
     <a href="https://sushios.seafoodstudios.com" target="_blank">SushiOS</a>
     <a href="https://spaceship.seafoodstudios.com/" target="_blank">Spaceship</a>
-    
+  </div>
+  <div class="projects-container">
     <a href="https://github.com/SeafoodStudios" target="_blank">GitHub</a>
     <a href="https://updates.seafoodstudios.com/" target="_blank">Updates</a>
   </div>
-
   <footer>© 2024 SeafoodStudios. All rights reserved.</footer>
 </body>
 </html>
