--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   <div class="projects-container">
     <a href="https://github.com/SeafoodStudios" target="_blank">GitHub</a>
     <a href="https://updates.seafoodstudios.com/" target="_blank">Updates</a>
+    <a href="https://status.seafoodstudios.com/" target="_blank">Status</a>
   </div>
   <footer>© 2024 SeafoodStudios. All rights reserved.</footer>
 </body>
