--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <a href="https://alchemy.seafoodstudios.com" target="_blank">Sigma Alchemy</a>
     <a href="https://salmon.seafoodstudios.com" target="_blank">Salmon WebView</a>
     <a href="http://ow.tiiny.site" target="_blank">Omega Web</a>
-    <a href="https://omega-ai.seafoodstudios.com/" target="_blank">OmegaAI</a>
+    <a href="https://omegaai.seafoodstudios.com/" target="_blank">OmegaAI</a>
     <a href="https://algae.seafoodstudios.com" target="_blank">ALGAE Transferer</a>
     <a href="https://algaemine.seafoodstudios.com" target="_blank">ALGAE Miner</a>
     <a href="https://sushios.seafoodstudios.com" target="_blank">SushiOS</a>
