--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <a href="https://algaemine.seafoodstudios.com" target="_blank">ALGAE Miner</a>
     <a href="https://sushios.seafoodstudios.com" target="_blank">SushiOS</a>
     <a href="https://spaceship.seafoodstudios.com/" target="_blank">Spaceship</a>
+    <a href="https://chatbox.seafoodstudios.com/" target="_blank">Spaceship</a>
   </div>
   <div class="projects-container">
     <a href="https://github.com/SeafoodStudios" target="_blank">GitHub</a>
