--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- Terminal Header -->
   <div class="terminal-header"></div>
   <h1>SeafoodStudios</h1>
-  <p>Welcome to SeafoodStudios.</p>
+  <p>Welcome to SeafoodStudios. We worship fish.</p>
   <!-- Projects Links -->
   <div class="projects-container">
     <a href="https://cloudroom.seafoodstudios.com" target="_blank">Cloudroom</a>
