--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <a href="https://sushios.seafoodstudios.com" target="_blank">SushiOS</a>
     <a href="https://spaceship.seafoodstudios.com/" target="_blank">Spaceship</a>
     <a href="https://chatbox.seafoodstudios.com/" target="_blank">Chatbox</a>
+    <a href="https://unite.seafoodstudios.com/" target="_blank">Unite</a>
   </div>
   <div class="projects-container">
     <a href="https://github.com/SeafoodStudios" target="_blank">GitHub</a>
