--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <a href="https://spaceship.seafoodstudios.com/" target="_blank">Spaceship</a>
     <a href="https://chatbox.seafoodstudios.com/" target="_blank">Chatbox</a>
     <a href="https://unite.seafoodstudios.com/" target="_blank">Unite</a>
+    <a href="https://lux.seafoodstudios.com/" target="_blank">Lux</a>
   </div>
   <div class="projects-container">
     <a href="https://github.com/SeafoodStudios" target="_blank">GitHub</a>
